corrected CSS component spill-over

--- a/client-frontend/src/Components/Home/Showfinder/Showfinder.css
+++ b/client-frontend/src/Components/Home/Showfinder/Showfinder.css
@@ -1,6 +1,3 @@
-body{
-    background-color: rgba(130, 127, 124, 0.511);
-}
 #eventBtnWrapper{
     margin-top: 10px;
     display: flex;
